<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbg"
    tools:context=".registerActivity">


    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:background="#46FFFFFF"
        android:drawableEnd="@drawable/ic_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc_bold"
        android:text="SIGN UP"
        android:textColor="#BB86FC"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />
    6<EditText
    android:id="@+id/editTextPhone2"
    android:layout_width="284dp"
    android:layout_height="44dp"
    android:background="#46FFFFFF"
    android:drawableEnd="@drawable/ic_name"
    android:ems="10"
    android:hint="@string/name"
    android:inputType="textPersonName"
    android:padding="5dp"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2"
    app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/editTextPhone3"
        android:layout_width="285dp"
        android:layout_height="45dp"
        android:background="#46FFFFFF"
        android:drawableEnd="@drawable/ic_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="285dp"
        android:layout_height="44dp"
        android:background="#46FFFFFF"
        android:drawableEnd="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone3"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:fontFamily="@font/alegreya_sc_bold"
        android:text="CREATE ACCOUNT"
        android:textColor="#FDFDFD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.44" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginHere"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.04" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.833" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginStart="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="Teacher"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="Student"
            android:textSize="16dp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>